--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -65,12 +65,19 @@ nav .navbar-brand {
   height: 100vh;
 }
 
-.welcome h1,
-h3 {
+.welcome h1 {
   font-weight: bold;
   color: black;
   letter-spacing: 5px;
   font-size: 4em;
+  text-align: center;
+}
+
+.welcome h3 {
+  font-weight: bold;
+  color: black;
+  letter-spacing: 5px;
+  font-size: 1.75em;
   text-align: center;
 }
 
