--- a/src/components/Staff/Staff.css
+++ b/src/components/Staff/Staff.css
@@ -41,6 +41,16 @@
   height: 120px;
   width: 120px;
 }
+.pic6 {
+  background-image: url('../../assets/steph.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  border: solid grey 3px;
+  height: 120px;
+  width: 120px;
+}
 
 .centerBlock {
   display: table;
