removed mac added britt

--- a/src/components/Staff/Staff.css
+++ b/src/components/Staff/Staff.css
@@ -32,7 +32,7 @@
 }
 
 .pic5 {
-  background-image: url('../../assets/mckenziet.png');
+  background-image: url('../../assets/brittany.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -42,7 +42,7 @@
   width: 120px;
 }
 .pic6 {
-  background-image: url('../../assets/steph.png');
+  background-image: url('../../assets/steph.JPG');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
