--- a/src/components/Staff/Staff.css
+++ b/src/components/Staff/Staff.css
@@ -1,4 +1,4 @@
-.pic1 {
+/* .pic1 {
   background-image: url('../../assets/gracieTest.png');
   background-size: cover;
   background-position: center;
@@ -7,7 +7,7 @@
   border: solid grey 3px;
   height: 120px;
   width: 120px;
-}
+} */
 
 .pic2 {
   background-image: url('../../assets/amyt.png');
