--- a/src/components/Staff/Staff.css
+++ b/src/components/Staff/Staff.css
@@ -9,6 +9,17 @@
   width: 120px;
 } */
 
+.pic1 {
+  background-image: url('../../assets/pitman.JPG');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  border: solid grey 3px;
+  height: 120px;
+  width: 120px;
+}
+
 .pic2 {
   background-image: url('../../assets/amyt.png');
   background-size: cover;
@@ -42,7 +53,7 @@
   width: 120px;
 }
 .pic6 {
-  background-image: url('../../assets/steph.JPG');
+  background-image: url('../../assets/steph.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
