Removed steph, kara, facials. improved scroll perf

--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -1,9 +1,6 @@
 .services {
-  background-image: url('../../assets/leav.jpeg');
-  background-repeat: no-repeat;
+  background: url('../../assets/leav.jpeg') no-repeat center center fixed;
   background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
 }
 
 .card-s {
