--- a/src/components/Staff/Staff.css
+++ b/src/components/Staff/Staff.css
@@ -10,7 +10,7 @@
 } */
 
 .pic1 {
-  background-image: url('../../assets/pitman.JPG');
+  background-image: url('../../assets/pitman.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
