Removed nat, peels, other changed price

--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -57,7 +57,7 @@ nav .navbar-brand {
 }
 
 .welcome {
-  background-image: url('../../assets/248613-P3U1ZD-912.jpeg');
+  background-image: url('../../assets/mainBg.jpeg');
   background-size: cover;
   background-position: 0px -850px;
   background-repeat: no-repeat;
