--- a/src/components/Staff/Staff.css
+++ b/src/components/Staff/Staff.css
@@ -1,4 +1,4 @@
-.pic2 {
+.pic1 {
   background-image: url('../../assets/amyt.png');
   background-size: cover;
   background-position: center;
@@ -9,8 +9,19 @@
   width: 120px;
 }
 
-.pic5 {
+.pic2 {
   background-image: url('../../assets/brittany.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  border: solid grey 3px;
+  height: 120px;
+  width: 120px;
+}
+
+.pic3 {
+  background-image: url('../../assets/Alyvia.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
